# Win_Server-Client

./: CMakeLists.txt  Crypt.cpp  Crypt.h  Crypt.hpp  File.cpp  File.h  File.hpp  Includes.h  Includes.hpp  README.md  Recv.cpp  Recv.hpp  Send.cpp  Send.hpp  Win_Server-Client.sln
Client/: Client.cpp  CommandClient.cpp  CommandClient.h  CommandClient.hpp
Server/: CommandServer.cpp  CommandServer.h  CommandServer.hpp  Server.cpp
